[gd_scene load_steps=6 format=2]

[ext_resource path="res://materials/mine_idle.tres" type="Material" id=1]
[ext_resource path="res://characters/weapons/Mine.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.2
bottom_radius = 0.3
height = 0.1
radial_segments = 12
rings = 1

[sub_resource type="CylinderShape" id=3]
radius = 2.0
height = 1.5

[sub_resource type="CylinderShape" id=2]
radius = 0.3
height = 1.5

[node name="Mine" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0498589, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="TankDetectArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 3
monitorable = false

[node name="TankCollision" type="CollisionShape" parent="TankDetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 3 )
disabled = true

[node name="ProjectileDetectArea" type="Area" parent="."]
collision_layer = 4
collision_mask = 4

[node name="ProjectileCollision" type="CollisionShape" parent="ProjectileDetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 2 )
disabled = true

[node name="SetupTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="TankDetectArea" to="." method="_on_TankDetectArea_body_entered"]
[connection signal="body_entered" from="ProjectileDetectArea" to="." method="_on_ProjectileDetectArea_body_entered"]
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
